"Bug Fix - Align Image"

--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,7 @@ html {
 		align-self: center;
 	}
 	.imgcenter{
+		margin-top: 25px;
 		margin-left: auto;
 		margin-right: auto;
 	  }
